--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,9 +1,10 @@
 :root {
-  --font: 'Poppins', sans-serif;
-  --font-size: "14px";
-  --bg-color: #FFFFFF;
-  --primary-color: #232932;
-  --black: #121212;
-  --gray: #696969;
-  --blue: ##2d96bd;
+  --font: 'Roboto', sans-serif;
+  --font-size: "16px";
+  --bg-color: #0F172A;
+  --primary-color: #22D3EE;
+  --black: #1E293B;
+  --white: #F8FAFC;
+  --gray: #CBD5E1;
+
 }
