--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,5 +1,199 @@
+html {
+
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: var(--black);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px var(--primary-color);
+    border-radius: 20px;
+
+  }
+
+  scroll-behavior: smooth;
+
+}
+
 body {
   font-family: var(--font);
   font-size: var(--font-size);
   background: var(--bg-color);
+}
+
+.bg-primary {
+  background-color: var(--bg-color) !important;
+}
+
+#app {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 15px;
+}
+
+
+.section:first-child {
+  padding-top: calc(44px + 60px);
+
+  @include minWidth(567px) {
+    padding-top: calc(112px + 84px);
+  }
+}
+
+
+main {
+  padding-bottom: 70px;
+}
+
+.section {
+  padding: 30px 0;
+  color: var(--gray);
+
+  @include minWidth(567px) {
+    padding: 53px 0;
+
+  }
+
+
+  &__title {
+
+    font-size: 20px;
+    color: var(--white);
+
+    @include minWidth(576px) {
+      font-size: 40px;
+    }
+
+    @include minWidth(992px) {
+      font-size: 40px;
+    }
+  }
+}
+
+.text-primary {
+
+  font-weight: 500;
+  background: linear-gradient(270.06deg, #22D3EE 20.05%, #0EA5E9 39.83%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  font-size: inherit;
+
+}
+
+.text-muted {
+  color: #9CA3AF !important;
+  font-size: 12px;
+
+  @include minWidth(768px) {
+    font-size: 18px;
+
+  }
+}
+
+
+.subscribe__form,
+.newsletter__form,
+.search__form {
+
+  padding-top: 27px;
+
+  @include minWidth(575.98px) {
+    padding-top: 56px;
+  }
+
+  .form-control {
+    padding: 16px 18px;
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--gray);
+    background-color: var(--black);
+    border: none;
+    outline: none;
+    border-radius: 30px;
+
+    &::placeholder {
+      color: inherit;
+      padding-left: 10px;
+    }
+
+    @include minWidth(575.98px) {
+      padding: 23px 34px;
+      font-size: 20px;
+
+    }
+
+  }
+
+  button.button-primary {
+    background: linear-gradient(270deg, #22D3EE 50%, #0EA5E9 100%);
+    font-weight: 700;
+    padding: 7px 14px;
+    border-radius: 30px;
+    font-size: 14px;
+    outline: none;
+    border: none;
+    position: absolute;
+    top: 50%;
+    right: -20px;
+    transform: translate(-50%, -50%);
+
+    @include minWidth(575.98px) {
+      padding: 12px 40px;
+      font-size: 20px;
+      right: -70px;
+
+
+    }
+
+  }
+}
+
+
+.badge {
+  padding: 8px;
+  font-weight: 700;
+  font-size: 12px;
+  border-radius: 10px;
+
+
+
+
+
+  @include minWidth(576px) {
+    font-size: 14px;
+  }
+
+  &-1 {
+    background: linear-gradient(180deg, #10B981 0%, #BEF264 100%);
+
+  }
+
+  &-2 {
+    background: linear-gradient(180deg, rgba(220, 38, 38, 0.2) 0%, rgba(249, 115, 22, 0.2) 100%);
+
+  }
+
+  &-3 {
+    background: linear-gradient(180deg, #7C3AED 0%, #60A5FA 100%);
+
+  }
+
+}
+
+
+.bg-linear-1 {
+  background: linear-gradient(180deg, rgba(16, 185, 129, 0.2) 0%, rgba(190, 242, 100, 0.2) 100%);
+}
+
+.bg-linear-2 {
+  background: linear-gradient(180deg, rgba(220, 38, 38, 0.2) 0%, rgba(249, 115, 22, 0.2) 100%);
+}
+
+.bg-linear-3 {
+  background: linear-gradient(180deg, rgba(124, 58, 237, 0.2) 0%, rgba(96, 165, 250, 0.2) 100%);
 }
