--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -3,11 +3,13 @@
 *:after {
   box-sizing: border-box;
 }
+
 * {
   margin: 0;
   padding: 0;
   font: inherit;
 }
+
 img,
 picture,
 svg,
@@ -15,6 +17,12 @@ video {
   display: block;
   max-width: 100%;
 }
+
 body {
   min-height: 100vh;
+}
+
+p {
+  padding: 0;
+  margin: 0;
 }
