--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 @import "reset";
 @import "variables";
 @import "mixins";
 @import "global";
+@import "header";
+@import "hero";
+@import "projects";
+@import "posts";
+@import "subscribe";
+@import "newsletter";
 @import "footer";
