--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,7 @@
 :root {
   --font: 'Roboto', sans-serif;
   --font-size: "16px";
-  --bg-color: #0F172A;
+  --body-bg-color: #0F172A;
   --primary-color: #22D3EE;
   --black: #1E293B;
   --white: #F8FAFC;
