--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -546,6 +546,9 @@ main {
   font-size: 16px;
   color: var(--gray);
 }
+.footer .icon:hover {
+  color: var(--primary-color);
+}
 @media screen and (min-width: 576px) {
   .footer .icon {
     font-size: 30px;
