--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,6 +292,10 @@ main {
     font-size: 26px;
   }
 }
+.hero__socials img {
+  width: 100%;
+  height: 100%;
+}
 .hero__socials .icon {
   width: 30px;
   height: 30px;
