--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -32,6 +32,12 @@
 
   &__socials {
 
+
+    & img {
+      width: 100%;
+      height: 100%;
+    }
+
     & .icon {
       width: 30px;
       height: 30px;
