--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,6 +264,19 @@ main {
   background-clip: text;
   transform: translateX(10px);
 }
+@media screen and (max-width: 575.98px) {
+  .header .navbar-toggler {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .header .navbar-toggler .navbar-toggler-icon {
+    width: 1.3rem;
+    height: 1.3rem;
+  }
+}
 
 .hero {
   display: block;
