--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -47,15 +47,14 @@
 
     @include maxWidth(575.98px) {
 
-      width: 40px;
-      height: 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      width: 35px;
+      height: 35px;
+      padding: 0;
 
       & .navbar-toggler-icon {
-        width: 1.3rem;
-        height: 1.3rem;
+        width: 1.2rem;
+        height: 1.2rem;
+        ;
       }
     }
   }
