--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,6 +135,20 @@ main {
   }
 }
 
+.button {
+  font-weight: 700;
+  padding: 7px 14px;
+  font-size: 14px;
+  outline: none;
+  border: none;
+}
+
+.button-secondary {
+  background: linear-gradient(270deg, #22D3EE 50%, #0EA5E9 100%);
+  border-radius: 5px;
+  color: var(--black);
+}
+
 .subscribe__form,
 .newsletter__form,
 .search__form {
@@ -177,12 +191,7 @@ main {
 .newsletter__form button.button-primary,
 .search__form button.button-primary {
   background: linear-gradient(270deg, #22D3EE 50%, #0EA5E9 100%);
-  font-weight: 700;
-  padding: 7px 14px;
   border-radius: 30px;
-  font-size: 14px;
-  outline: none;
-  border: none;
   position: absolute;
   top: 50%;
   right: -20px;
@@ -229,6 +238,35 @@ main {
 
 .bg-linear-3 {
   background: linear-gradient(180deg, rgba(124, 58, 237, 0.2) 0%, rgba(96, 165, 250, 0.2) 100%);
+}
+
+.socials img {
+  width: 100%;
+  height: 100%;
+}
+.socials .icon {
+  width: 30px;
+  height: 30px;
+}
+@media screen and (min-width: 567px) {
+  .socials .icon {
+    height: 60px;
+    width: 60px;
+  }
+}
+
+.avatar {
+  height: 100px;
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 17px;
+}
+@media screen and (min-width: 576px) {
+  .avatar {
+    height: 300px;
+    width: 300px;
+  }
 }
 
 .header__logo {
@@ -538,6 +576,20 @@ main {
   .newsletter__content {
     padding-top: 50px;
     font-size: 24px;
+  }
+}
+
+.about .name {
+  font-size: 18px;
+}
+.about__content {
+  margin-top: 30px;
+  text-align: start;
+  font-size: 17px;
+}
+@media screen and (min-width: 768px) {
+  .about__content {
+    font-size: 22px;
   }
 }
 
