--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -107,6 +107,19 @@ main {
   }
 }
 
+.button {
+  font-weight: 700;
+  padding: 7px 14px;
+  font-size: 14px;
+  outline: none;
+  border: none;
+}
+
+.button-secondary {
+  background: linear-gradient(270deg, #22D3EE 50%, #0EA5E9 100%);
+  border-radius: 5px;
+  color: var(--black);
+}
 
 .subscribe__form,
 .newsletter__form,
@@ -143,12 +156,7 @@ main {
 
   button.button-primary {
     background: linear-gradient(270deg, #22D3EE 50%, #0EA5E9 100%);
-    font-weight: 700;
-    padding: 7px 14px;
     border-radius: 30px;
-    font-size: 14px;
-    outline: none;
-    border: none;
     position: absolute;
     top: 50%;
     right: -20px;
@@ -210,3 +218,35 @@ main {
   background: linear-gradient(180deg, rgba(124, 58, 237, 0.2) 0%, rgba(96, 165, 250, 0.2) 100%);
 }
 
+.socials {
+
+  & img {
+    width: 100%;
+    height: 100%;
+  }
+
+  & .icon {
+    width: 30px;
+    height: 30px;
+
+    @include minWidth(567px) {
+      height: 60px;
+      width: 60px;
+    }
+  }
+}
+
+.avatar {
+
+  height: 100px;
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
+
+  margin-bottom: 17px;
+
+  @include minWidth(576px) {
+    height: 300px;
+    width: 300px;
+  }
+}
